# better-call-scout

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  cloudbuild.yaml  final_plan.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/commands/: check-schemas.md  my-work.md  review-agent.md  status.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phase-1/: 01-01-SUMMARY.md  PLAN.md
.planning/phases/02-collection-layer/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-analysis-layer/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-integration-frontend/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-UI-SPEC.md
app/: main.py  streamlit_app.py
app/static/: browse.html  index.html
src/: orchestrator.py
src/agents/: critic_agent.py  guardrail_agent.py  synthesis_agent.py
src/agents/analysis/: __init__.py  _prompts.py  vc_analyst.py  (+2 more)
src/models/: schemas.py
src/rag/: ingestion.py  retrieval.py
src/visualization/: charts.py
tests/: conftest.py  test_analysis.py  test_collection.py  test_e2e.py  test_orchestrator.py
tests/unit/: test_schemas.py
(+4 files in other folders)
