[project]
name = "better-call-scout"
version = "0.1.0"
description = "Multi-agent VC/startup scout using Google ADK, Gemini, ChromaDB, and Streamlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=0.1.0",
    "google-cloud-aiplatform>=1.60.0",
    "streamlit>=1.35.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "requests>=2.32.0",
    "tavily-python>=0.3.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.43.0",
    "sse-starlette>=3.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
